workshop03/bggapp-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bggapp-deploy
  namespace: bggns
  labels:
    app: bggapp
    name: bggapp-deploy

spec:
  replicas: 3
  selector:
    matchLabels:
      app: bggapp
      name: bggapp-po
      version: v1
  template:
    metadata:
      name: api-po
      labels:
        app: bggapp
        name: bggapp-po
        version: v1
    spec:
      containers:
        - name: bggapp-container
          image: chukmunnlee/bgg-app:nov-2025
          imagePullPolicy: IfNotPresent
          resources:
            requests: # minimum requirement. kube will ensure this much atleast
              cpu: 250m # 1/4th of a cpu . 1 cpu = 1000m m stands for milli core
              memory: 128Mi
            limits: # hard limit
              cpu: 512m
              memory: 128Mi
          livenessProbe:
            httpGet:
              path: /healthz
              port: 5000
            initialDelaySeconds: 15
            periodSeconds: 60
            timeoutSeconds: 5
          ports:
            - containerPort: 5000

---
apiVersion: v1
kind: Service
metadata:
  name: bggapp-svc
  namespace: bggns
  labels:
    app: bggapp-svc
    name: bggapp
spec:
  type: ClusterIP
  selector:
    app: bggapp
    name: bggapp-po
    version: v1
  ports:
    - port: 5000
      targetPort: 5000
