workshop03/bggdb-deploy.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: bggns

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bggdb-deploy
  namespace: bggns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bggdb-mysql
  template:
    metadata:
      labels:
        app: bggdb-mysql
    spec:
      volumes:
        -  name: data-vol
           persistentVolumeClaim:
             claimName: bggdb-pvc
      containers:
        -   name: bggdb-containers
            image: chukmunnlee/bgg-database:nov-2025
            imagePullPolicy: IfNotPresent
            ports:
              -   containerPort: 3306
            volumeMounts:
              -   name: data-vol
                  mountPath: /var/lib/mysql

---
apiVersion: v1
kind: Service
metadata:
  name: bggdb-svc
  namespace: bggns
  labels:
    app: bggdbsvc
    name: bggdb-svc
spec:
  type: ClusterIP
  selector:
    app: bggdb-mysql
  ports:
    - port: 3306
      targetPort: 3306
