workshop03/bggdb-ing.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bggdb-ing
  namespace: bggns
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: bgg-146.190.4.229.sslip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bggapp-svc
                port:
                  number: 5000
